--- a/tiktoken-cffi/Cargo.toml
+++ b/tiktoken-cffi/Cargo.toml
@@ -9,4 +9,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 libc = "0.2.140"
-tiktoken-rs = "0.3.2"
+tiktoken-rs = "0.3.3"
+parking_lot = "0.12.1"
+anyhow = "1.0.70"
